--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.couchbase.bootstrap-hosts=localhost
 spring.couchbase.bucket.name=beer-sample
 spring.couchbase.bucket.password=beer-sample
+logging.level.org.springframework.web = DEBUG
