--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.couchbase.bootstrap-hosts=localhost
 spring.couchbase.bucket.name=beer-sample
 spring.couchbase.bucket.password=beer-sample
 logging.level.org.springframework.web = DEBUG
+logging.level.org.springframework.data.couchbase.repository.query = DEBUG
+logging.level.org.springframework.data.couchbase.repository.auditing = DEBUG
+server.port=8081
