added request logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.couchbase.bootstrap-hosts=localhost
 spring.couchbase.bucket.name=beer-sample
 spring.couchbase.bucket.password=beer-sample
-logging.level.org.springframework.web = DEBUG
-logging.level.org.springframework.data.couchbase.repository.query = DEBUG
+logging.level.org.springframework.web = debug
+logging.level.org.springframework.data.couchbase.repository.query = debug
+logging.level.org.springframework.data.couchbase.repository.query.SpatialViewBasedQuery = trace
+logging.level.org.springframework.data.couchbase.repository.query.StringN1qlBasedQuery = trace
+logging.level.org.springframework.data.couchbase.repository.support.IndexManager = debug
 server.port=8081
